terraform/main.tf
provider "helm" {
  kubernetes {
    config_path = "~/.kube/config"
  }
}

provider "kubernetes" {
  config_path    = "~/.kube/config"
  config_context = "gke_${var.project_id}_${var.zone}_${var.gke_cluster_name}"
}

variable "project_id" {
  description = "The project ID to host the cluster in"
}

variable "region" {
  description = "The region to host the cluster in"
}

variable "zone" {
  description = "The zone to host the cluster in (required if is a zonal cluster)"
}

variable "network_name" {
  description = "The name of the network"
}

variable "gke_cluster_name" {
  description = "The name of the cluster"
}

variable "num_nodes" {
  description = "The number of cluster nodes"
}

variable "machine_type" {
  description = "The machine type of the cluster nodes"
}

variable "disk_size" {
  description = "The disk size of the cluster nodes"
}

resource "google_compute_network" "default" {
  name                    = var.network_name
  auto_create_subnetworks = "false"
  project = var.project_id
  routing_mode = "REGIONAL"
}

resource "google_compute_subnetwork" "proxy" {
  provider = google-beta
  name          = "proxy-only-subnet"
  ip_cidr_range = "11.129.0.0/23"
  project       = google_compute_network.default.project
  region        = var.region
  network       = google_compute_network.default.id
  purpose       = "REGIONAL_MANAGED_PROXY"
  role          = "ACTIVE"
}

resource "google_compute_subnetwork" "default" {
  name          = "${var.gke_cluster_name}-subnet"
  project       = google_compute_network.default.project
  region        = var.region
  network       = google_compute_network.default.name
  ip_cidr_range = "10.0.0.0/24"
}

resource "google_compute_router" "router" {
  name    = "nat-router"
  project = google_compute_subnetwork.default.project
  region  = google_compute_subnetwork.default.region
  network = google_compute_network.default.id
}

resource "google_compute_router_nat" "nat" {
  name                               = "router-nat"
  router                             = google_compute_router.router.name
  region                             = google_compute_router.router.region
  project                            = google_compute_router.router.project
  nat_ip_allocate_option             = "AUTO_ONLY"
  source_subnetwork_ip_ranges_to_nat = "ALL_SUBNETWORKS_ALL_IP_RANGES"
}

resource "google_container_cluster" "default" {
  provider = google-beta
  project  = var.project_id
  name     = var.gke_cluster_name
  location = var.zone
  initial_node_count = var.num_nodes
  networking_mode = "VPC_NATIVE"
  network    = google_compute_network.default.name
  subnetwork = google_compute_subnetwork.default.name
  logging_service = "none"

  node_config {
    spot = true
    machine_type = var.machine_type
    disk_size_gb = var.disk_size
    tags = ["${var.gke_cluster_name}"]
  }
  
  addons_config {
    http_load_balancing {
      # This needs to be enabled for the NEG to be automatically created for the ingress gateway svc
      disabled = false
    }
  }

  private_cluster_config {
    enable_private_nodes = true
    enable_private_endpoint = false
    master_ipv4_cidr_block = "172.16.0.16/28"
  }

  ip_allocation_policy {
    cluster_ipv4_cidr_block = "5.0.0.0/16"
    services_ipv4_cidr_block = "5.1.0.0/16"
  }

  default_snat_status {
    disabled = true
  }

  master_authorized_networks_config {
    cidr_blocks {
      # Because this is a private cluster, need to open access to the Master nodes in order to connect with kubectl
      cidr_block = "0.0.0.0/0"
      display_name = "World"
    }
  }
}

# Update the kube config for the new cluster and make it the current cluster context
resource "null_resource" "local_k8s_context" {
  depends_on = [google_container_cluster.default]
  provisioner "local-exec" {
    command = "gcloud container clusters get-credentials ${var.gke_cluster_name} --project=${var.project_id} --zone=${var.zone}"
  }
}

resource "time_sleep" "wait_for_kube" {
  depends_on = [null_resource.local_k8s_context]
  create_duration = "30s"
}

resource "kubernetes_namespace" "gloo_system" {
  # Need to give a bit more time for the cluster to be reachable
  depends_on = [time_sleep.wait_for_kube]
  metadata {
    name = "gloo-system"
  }
}

# Install Gloo Edge, an Envoy-based Kubernetes ingress and API gateway
resource "helm_release" "gloo" {
  depends_on = [kubernetes_namespace.gloo_system]
  name       = "gloo-edge"
  namespace  = "gloo-system"

  repository = "https://storage.googleapis.com/solo-public-helm"
  chart      = "gloo"
  
  set {
    name  = "gatewayProxies.gatewayProxy.service.type"
    value = "ClusterIP"
    # Because we are using a container native network, and the NEG, only a ClusterIP is needed
    # Also, don't want to use LoadBalancer as that will automatically trigger creation of an unneeded GCP load balancer
  }

  set {
    name  = "gatewayProxies.gatewayProxy.kind.deployment.replicas"
    value = "2"
    # Because we are using only spot nodes, having at least 2 replicas is needed for resiliency
  }

  set {
    name  = "gatewayProxies.gatewayProxy.antiAffinity"
    value = "true"
    # Because we are using only spot nodes, need to have antiAffinity for resiliency
  }

  set {
    name  = "gatewayProxies.gatewayProxy.service.extraAnnotations.cloud\\.google\\.com/neg"
    value = <<EOT
    {"exposed_ports": {"80":{"name": "ingressgateway"}}}
    EOT
  }
}

resource "google_compute_forwarding_rule" "primary" {
  depends_on = [google_compute_subnetwork.proxy]
  name       = "l7-xlb-forwarding-rule-http"
  project    = google_compute_subnetwork.default.project
  region     = google_compute_subnetwork.default.region
  ip_protocol           = "TCP"
  load_balancing_scheme = "EXTERNAL_MANAGED"
  port_range            = "80"
  target                = google_compute_region_target_http_proxy.default.id
  network               = google_compute_network.default.id
  ip_address            = google_compute_address.default.id
  network_tier          = "STANDARD"
}

resource "google_compute_region_target_http_proxy" "default" {
  project = google_compute_subnetwork.default.project
  region  = google_compute_subnetwork.default.region
  name    = "l7-xlb-proxy-http"
  url_map = google_compute_region_url_map.default.id
}

resource "google_compute_region_url_map" "default" {
  project = google_compute_subnetwork.default.project
  region  = google_compute_subnetwork.default.region
  name    = "regional-l7-xlb-map-http"
  default_service = google_compute_region_backend_service.default.id
}

resource "google_compute_region_backend_service" "default" {
  depends_on = [helm_release.gloo]
  project = google_compute_subnetwork.default.project
  region  = google_compute_subnetwork.default.region
  name        = "l7-xlb-backend-service-http"
  protocol    = "HTTP"
  timeout_sec = 10

  load_balancing_scheme = "EXTERNAL_MANAGED"
  health_checks = [google_compute_region_health_check.default.id]

  backend {
    group = "https://www.googleapis.com/compute/v1/projects/${var.project_id}/zones/${var.zone}/networkEndpointGroups/ingressgateway"
    capacity_scaler = 1
    balancing_mode = "RATE"
    max_rate_per_endpoint = 3500
  }
}

resource "google_compute_region_health_check" "default" {
  depends_on = [google_compute_firewall.default]
  project = google_compute_subnetwork.default.project
  region  = google_compute_subnetwork.default.region
  name   = "l7-xlb-basic-check-http"
  http_health_check {
    port_specification = "USE_SERVING_PORT"
    request_path = "/"
  }
}

resource "google_compute_address" "default" {
  name = "my-static-ip"
  project = google_compute_subnetwork.default.project
  region  = google_compute_subnetwork.default.region
  network_tier = "STANDARD"
}

resource "google_compute_firewall" "default" {
  name = "fw-allow-health-check-and-proxy"
  network = google_compute_network.default.id
  project = google_compute_network.default.project
  source_ranges = ["130.211.0.0/22", "35.191.0.0/16", "11.129.0.0/23"]
  allow {
    protocol = "tcp"
  }
  target_tags = ["${var.gke_cluster_name}"]
  direction = "INGRESS"
}
